--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chalk": "1.1.3",
     "cors": "^2.8.4",
     "css-loader": "0.28.7",
-    "dotenv": "4.0.0",
+    "dotenv": "^5.0.1",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
     "eslint-config-react-app": "^2.1.0",
@@ -44,6 +44,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
