--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "20.0.4",
     "massive": "^4.7.2",
     "node-sass-chokidar": "^1.2.2",
+    "nodemailer": "^4.6.4",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -48,6 +49,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
+    "redux-promise-middleware": "^5.1.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
