--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-stripe-elements": "^1.6.0",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
     "resolve": "1.6.0",
+    "stripe": "^5.8.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
