--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "lodash": "^4.17.10",
     "massive": "^4.7.2",
     "node-sass-chokidar": "^1.2.2",
     "nodemailer": "^4.6.4",
