--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "massive": "^4.7.2",
     "node-sass-chokidar": "^1.2.2",
     "nodemailer": "^4.6.4",
+    "nodemon": "^1.17.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -73,7 +74,7 @@
     "test": "node scripts/test.js --env=jsdom"
   },
   "devDependencies": {
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1"
   },
   "jest": {
